--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -436,4 +436,107 @@ python -c "print('\n'.join(map(lambda n: str( n/2 == n//2 ), range(1000))))"
 
 donde usamos `join`, un método de `str` al que se le pasa una
 secuencia de cadenas; por eso hemos modificado ligeramente el `lambda`
-para que el resultado de la prueba se pase a una cadena con `str`. 
+para que el resultado de la prueba se pase a una cadena con `str`. De
+hecho, en este programa definimos la función `lambda` para todos y
+cada uno de los elementos del `range`. No demasiado bueno. Vamos a
+*sacarlo fuera del bucle*, y definirlo una sola vez:
+
+```bash
+python -c "es_par = lambda n: str(n/2 == n//2);print('\n'.join(map(es_par, range(1000))))"
+```
+Hemos definido la función `es_par`, pero ahora nos encontramos con dos
+órdenes seguidas. Para que el intérprete lo entienda, las separamos
+con punto y coma. En Python se pueden separar todas las sentencias con
+`;`, pero realmente sólo es necesario cuando están en la misma línea,
+como se verá más adelante. 
+
+Ahora cabría pensar si merece realmente la pena hacer esto. Es
+ligeramente más legible, lo que *es bien* desde el punto de vista de
+Python, pero ¿ganamos algo de velocidad?
+
+Una forma de hacerlo es mediante el módulo `timeit`. Los módulos son
+*espacios de nombres*, el sentido que crean un prefijo para las
+funciones que incluyen. Tampoco se "cargan" por omisión, con lo que no
+ocupan memoria; hay que cargarlos explícitamente. Python es
+minimalista en el número de funciones que incluye, así que en este
+caso tenemos que trabajar con este módulo, que afortunadamente es uno
+de los incluidos en el *core*, o entre los ficheros que se
+distribuyen de forma habitual con el intérprete de Python. `timeit`
+hace un *benchmark*, ejecutando una serie de órdenes repetidamente y
+dándonos la temporicación. Y lo podemos usar directamente desde la
+línea de órdenes, de la forma siguiente:
+
+```
+python -m timeit -s "print('\n'.join(map(lambda n: str( n/2 == n//2 ),
+range(1000))))"
+```
+
+lo que ejecutará el programa; con `-m` se le indica el nombre del
+módulo que estamos importando y con `-s`, que significa *setup*, lo
+que vamos a ejecutar. Finalmente dará un resultado de este
+estilo:
+
+```
+100000000 loops, best of 3: 0.00571 usec per loop
+```
+
+Podríamos, en principio, usarlo así para ver qué es más conveniente,
+si una u otra forma. Aunque a priori cabría pensar que la forma en la
+no se crea una función cada vez que se ejecuta un bucle es más rápida,
+ejecutando eso nos va a dar más o menos el mismo resultado, que de
+hecho es el resultado que se obtiene prácticamente para todo. En este
+caso, para funciones tan simples, no resulta realmente demasiado
+útil. 
+
+Probaremos desde el REPL, a ver si obtenemos algo más
+razonable. Importamos el módulo y la función del mismo que
+necesitamos.
+
+```Python
+from timeit import timeit
+```
+
+Y vamos a medir las dos formas:
+
+```Python
+timeit(setup="map(lambda n: str( n/2 == n//2 ), range(1000))")
+0.006306399000095553
+timeit(setup="es_par = lambda n: str(n/2 == n//2);map(es_par, range(1000))")
+0.006795324999984587
+```
+
+La diferencia parece no ser demasiado grande, y lo que esperábamos que
+fuera más rápido, la segunda forma, es en realidad más lento. Pero
+algo importante en la medición es que las cosas no tienen por qué ser
+de la misma forma para todos los valores. Multipliquemos por 10 el
+número de elementos:
+
+```Python
+timeit(setup="es_par = lambda n: str(n/2 == n//2);map(es_par, range(10000))")
+0.006140023999250843
+timeit(setup="map(lambda n: str( n/2 == n//2 ), range(10000))")
+0.008905056998628424
+```
+El panorama cambia bastante, con la segunda forma, como era de
+esperar, un 25% más rápido. Al empezar a usar números más grandes, sí
+importa el número de veces que se define. Incluso podemos probar otro
+test de *paridad*
+
+```Python
+timeit(setup="es_par = lambda n: str(n^1 == 0);map(es_par, range(10000))")
+0.006006274999890593
+```
+
+que es un poquitín más rápido... En todo caso conviene repetir varias
+veces las operaciones. Estas operaciones son tan rápidas que realmente
+no merece la pena optimizar mucho salvo que se ejecuten miles de
+millones de veces. La optimización prematura es la madre de todos los
+vicios, y
+como
+[ahora es mejor que nunca](https://www.python.org/dev/peps/pep-0020/),
+tener una manera suficientemente rápida y legible de hacer algo es
+mejor que buscar hasta el infinito y más allá otra manera de hacerlo
+que tenga un 10% más de rapidez. Una vez más, si esta no es una
+función crítica donde el sistema pasa el 90% del tiempo.
+
+
