--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -534,9 +534,9 @@ millones de veces. La optimización prematura es la madre de todos los
 vicios, y
 como
 [ahora es mejor que nunca](https://www.python.org/dev/peps/pep-0020/),
-tener una manera suficientemente rápida y legible de hacer algo es
+tener una código suficientemente rápida y legible de hacer algo es
 mejor que buscar hasta el infinito y más allá otra manera de hacerlo
-que tenga un 10% más de rapidez. Una vez más, si esta no es una
+que sea un 10% más rápido. Una vez más, si esta no es una
 función crítica donde el sistema pasa el 90% del tiempo.
 
 
