añadiendo recursividad y cosas

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -539,4 +539,44 @@ mejor que buscar hasta el infinito y más allá otra manera de hacerlo
 que sea un 10% más rápido. Una vez más, si esta no es una
 función crítica donde el sistema pasa el 90% del tiempo.
 
+En muchos casos, la mejor forma de optimizar es simplemente plantear
+algoritmos de otra forma. Por ejemplo, usando 
 
+## recursión.
+
+Se habla de recursión cuando una función se llama a sí misma. En
+programación funcional, es la forma *normal* de hacer las cosas,
+suplantando la repetición. Uno de los principios de este tipo de
+programación es que las funcionen no tienen efectos secundarios; con
+la recursión se consigue *pasar* el estado como parámetro de una
+función sin tener que *guardarlo* en ningún momento. 
+
+En general, las funciones recursivas trabajan de la forma
+siguiente. Se compara el parámetro con el que marca el final de la
+recursión, que pueden ser uno o varios. Si es así, se devuelve el
+resultado. Si no, se llama a la función de nuevo con el parámetro
+procesado de alguna forma. Cuando se llega al final, se deshace la
+recursión y se devuelve el resultado. 
+
+La recursión funciona gracias a una estructura llamada [*pila* o *stack*](https://en.wikipedia.org/wiki/Stack_(abstract_data_type)). Una
+pila es una lista en la cual hay definidas sólo dos operaciones:
+añadir al final de la pila y extraer el último elemento
+añadido. Realmente, no existen las pilas en Python, pero podemos usar
+las listas, que son estructuras mutables, para ello
+
+```Python
+>>> fibonacci = [1,1,2,3]
+fibonacci = [1,1,2,3]
+>>> fibonacci.append(5)
+fibonacci.append(5)
+>>> fibonacci.pop()
+fibonacci.pop()
+5
+>>> fibonacci
+fibonacci
+[1, 1, 2, 3]
+```
+
+Cuando usamos una función que se llama a sí misma o recursiva, estamos
+haciendo esto, en realidad; sólo que es el propio lenguaje el que se
+encarga de llenar y posteriormente vaciar la pila. 
