Vamos con la recursión

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -579,4 +579,57 @@ fibonacci
 
 Cuando usamos una función que se llama a sí misma o recursiva, estamos
 haciendo esto, en realidad; sólo que es el propio lenguaje el que se
-encarga de llenar y posteriormente vaciar la pila. 
+encarga de llenar y posteriormente vaciar la pila. Así que vamos a
+crear una función de este tipo para averiguar si una cifra es múltiplo
+de tres lo que, recordando aritmética de primaria, resulta de sumar
+las cifras repetidamente hasta que resulta una sola, en cuyo caso será
+múltiplo de tres si esa cifra resultante es 3 o 9.
+
+```Python
+suma_cifras = lambda n:  sum(map(int,list(str(n))))
+def is_multiple_of_3(n): sum = suma_cifras(n); return is_multiple_of_3(sum) if (sum >= 10) else (True  if (sum==3) or (sum==9) else False)
+```
+
+Tenemos también dos formas diferentes de definir funciones. Primero,
+usando `lambda`. Para sumar las cifras tenemos que convertir primero
+el número en una cadena con `str`, luego la cadena en una lista de
+caracteres que representan cifras, pero que tendremos que volver a
+convertir en números para poder sumarlos. Una vez más uso de dos
+técnicas de pensamiento computacional: buscar la representación
+adecuada para los datos, y división de una operación en tres pasos (y
+eso en una sola línea). 
+
+La recursividad se usa en la siguiente, y aquí tenemos que usar la
+forma tradicional de definir funciones de Python: `def`, porque con el
+uso de `lambda` no se permite y en todo caso es una forma más compacta
+de definir la función; `lambda` se usa generalmente para funciones a
+las que no se le quiere asignar un nombre, así que asignarle un nombre
+viene a ser un contrasentido; úsese sólo en caso de que sea más fácil
+de comprender que la forma alternativa o se pueda definir en una sola
+línea. Tras el nombre de la función `is_multiple_of_3` ponemos entre
+paréntesis el parámetro que vamos a usar en la misma y, como
+anteriormente, órdenes separadas por `;`. La primera halla la suma de
+las cifras, y no es estrictamente necesaria, sólo por claridad.
+
+La segunda usa la construcción Resultado `if` cierto `else` lo que
+sea. Lo usa de forma anidada, lo que vuelve a contravenir, igual que
+la definición de la función en una sola
+línea,
+[la guía de estilo que desanima el uso de sentencias compuestas](https://www.python.org/dev/peps/pep-0008/),
+pero
+[lo práctico le gana a la pureza](https://hipertextual.com/2011/02/zen-python) y
+estamos tratando de condensar todo el Python posible en una sola
+línea, así que se perdona esta pequeña digresión, sobre todo porque la
+recursión queda más evidente. Si tiene más de una cifra (mayor que
+10), se sigue aplicando de forma recursiva. Si no, ya podemos
+comprobar si es o no múltiplo de 3: ¿es 3 o 9? Se devuelve `True`;
+False en caso contrario. El `return` al principio de la llamada
+recursiva es el que finalmente recoge el resultado. Al trabajar en el
+REPL habrá que pulsar ⤶ para indicar que termina ahí. 
+
+> *Ejercicio*: usar una función recursiva para calcular el factorial
+> de un número. ¿Habría alguna otra forma de hacerlo? ¿Cuál es más
+> rápida para números pequeños? ¿Y para números más grandotes?
+
+
+
