Corrige y además añade recursión

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -463,7 +463,7 @@ caso tenemos que trabajar con este módulo, que afortunadamente es uno
 de los incluidos en el *core*, o entre los ficheros que se
 distribuyen de forma habitual con el intérprete de Python. `timeit`
 hace un *benchmark*, ejecutando una serie de órdenes repetidamente y
-dándonos la temporicación. Y lo podemos usar directamente desde la
+dándonos la temporización. Y lo podemos usar directamente desde la
 línea de órdenes, de la forma siguiente:
 
 ```
@@ -631,5 +631,26 @@ REPL habrá que pulsar ⤶ para indicar que termina ahí.
 > de un número. ¿Habría alguna otra forma de hacerlo? ¿Cuál es más
 > rápida para números pequeños? ¿Y para números más grandotes?
 
+Podemos usar también recursión para calcular elementos de una sucesión
+que se defina de forma recursiva. En algunos lenguajes hay formas más
+compactas de hacerlo, por ejemplo en [Groovy](http://groovy-lang.org)
+definiríamos de esta forma el n-ésimo elemento de la sucesión de
+Fibonacci 
 
+```Groovy
+def fib(n) {n<2 ? 1 : fib(n-1)+fib(n-2)}
+```
+
+que usaría la suma de los dos elementos anteriores para calcular el
+elemento enésimo, y el operador ternario `?:`, que está presente en la
+mayoría de los lenguajes y que es similar al `if-else` en una sola
+línea de Python, con ? equivalente a `if` y `:` a `else`, aunque en
+otro orden: la comparación no es el segundo elemento, sino el
+primero. En este caso, si n es menor que dos se devuelve uno, si no se
+hace una llamada a la función sumando los dos elementos anteriores. 
+
+> *Ejercicio*: usando una función recursiva equivalente a la anterior
+> en Python, calcular los 20 primeros elementos de la sucesión de
+> Fibonacci. ¿Hasta que número es más o menos razonable hacerlo de
+> esta forma? 
 
