Termina con markdown
Y ahora estoy realmente cansado, casi que no he podido con este
último, aunque todo sea por acercarse a las 10k palabras. En este tema
hay también secciones que no son estrictamente Python, como la de
GitHub. Ese es siempre el espíritu: hay que aprender todo a la
vez. También he metido un poco de Groovy, ya que estaba.

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -654,3 +654,61 @@ hace una llamada a la función sumando los dos elementos anteriores.
 > Fibonacci. ¿Hasta que número es más o menos razonable hacerlo de
 > esta forma? 
 
+Te estarás preguntando si todas estas líneas son solo bytes, y se
+perderán como lágrimas en la lluvia cuando se apague el
+ordenador. Pues sí, pero no tiene por qué ser así si usas 
+
+## GitHub
+
+Ya te indicamos al principio de todo que era un buen momento para
+registrarse en GitHub, pero ibas muy liada y no nos hiciste
+caso. Vale, pues ahora *sí* que lo es, porque lo vamos a usar para
+publicar todas estas líneas que vas elaborando como ejercicios y poder
+enseñárselas al profe y al ancho mundo. 
+
+[GitHub](https://github.com) es un portal de desarrollo colaborativo
+de software que usa `git` como herramienta de control de
+fuentes. Aunque siempre es buen momento
+de [aprender git](http://amzn.to/2uuz27h), por lo pronto apenas si
+usamos ficheros, así que vamos a usar una de las funciones de este
+sitio, los llamados [*gists*](http://gist.github.com), donde se pueden
+alojar desde textos a pequeños trozos de programa explicados, como los
+que podéis estar haciendo en este curso o siguiendo este manual.
+
+Se puede usar eligiendo un nombre de fichero y copiando y pegando el
+contenido en el sitio correspondiente; el fichero se puede comentar
+usando el formato de comentarios del lenguaje correspondiente, por
+ejemplo, comenzando la línea con `#` en Python (y para el caso,
+también en Perl y Ruby). 
+
+>*Ejercicio*: subir a gist.github.com alguno de los ejercicios creados
+>anteriormente, usando comentarios para explicarlo. Difundirlo también
+>por Twitter, con la etiqueta #1linepy, enlazándolo.
+
+Por otra parte, también se pueden incluir en un repositorio de GitHub
+normal, que es el nombre que reciben los proyectos. Los repositorios
+públicos son gratuitos en GitHub, y crearlo es tan fácil como elegir
+una licencia, el lenguaje que se va a usar y crear un fichero
+`README.md`.
+
+Este fichero está en un lenguaje de marcas simplificado
+llamado [Markdown](https://es.wikipedia.org/wiki/Markdown), como, por
+otra parte, está escrito este mismo manual. Sin necesidad de saber
+HTML y con marcas simples como `#` para un titular de primer orden o
+rodear una palbra con `**` para indicar que va a estar en cursiva, se
+pueden crear páginas con una tipografía adecuada, con inclusión de
+código, incluso tablas y algunas cosas más avanzadas, sin necesidad de
+usar lenguajes más complejos como HTML o un procesador de
+textos. Usando programas como `pandoc` o, en muchos casos,
+directamente incluido en el editor, se puede generar HTML o incluso
+PDF a partir del
+original. [Las marcas son fáciles de recordar, y GitHub tiene un *sabor* especial](https://guides.github.com/features/mastering-markdown/),
+que se puede usar dentro de sus páginas. Cualquier fichero en Markdown
+incluido en un repositorio GitHub aparecerá convertido a HTML y con la
+apariencia que corresponda a las marcas incluidas.
+
+>*Ejercicio*: Alternativamente a los gist, crear un repositorio en
+>GitHub con los ejercicios, cada uno en un fichero correspondiente, y
+>con un enlace y explicación en el `README.md` creado. Una vez más,
+>difundir por Twitter con `#1linepy`
+
