Corrige los errores

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -695,7 +695,7 @@ Este fichero está en un lenguaje de marcas simplificado
 llamado [Markdown](https://es.wikipedia.org/wiki/Markdown), como, por
 otra parte, está escrito este mismo manual. Sin necesidad de saber
 HTML y con marcas simples como `#` para un titular de primer orden o
-rodear una palbra con `**` para indicar que va a estar en cursiva, se
+rodear una palabra con `**` para indicar que va a estar en cursiva, se
 pueden crear páginas con una tipografía adecuada, con inclusión de
 código, incluso tablas y algunas cosas más avanzadas, sin necesidad de
 usar lenguajes más complejos como HTML o un procesador de
