Antes de la *gran división*

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -28,11 +28,16 @@ cualquier otro, número o cadena, y se pueden definir usando `lambda`.
 Esta función va a usar `dato` para referirse a los valores que se le
 van a pasar a la función; tras los `:` especifica la operación que va
 a realizar sobre el mismo, que es a la vez el valor que va a
-devolver. En este caso, multiplicarlo por sí mismo. Los primeros
+devolver. En este caso, multiplicarlo por sí mismo y devolver el valor. Los primeros
 paréntesis, que, recordemos, sirven para agrupar operaciones, definen
 esta operación sin nombre; los segundos paréntesis sirven para definir
-el valor que se le va a pasar a la función definida, por el momento
-sin nombre.
+el valor que se le va a pasar a la función definida. Esta función es
+*pura*, tal como las funciones mátemáticas, en el sentido que toma un
+valor, aunque podrían ser varios, y devuelve otro valor. No tiene
+*efectos secundarios*: no cambia nada en el exterior, ni siquiera el
+valor de las variables sobre las que trabaja. Recibe una copia de los
+valores con los que se les llama, en lo que se denomina *paso por
+valor*, y devuelve otro valor. Simple y elegante. 
 
 A los lenguajes que tienen, aparte de la posibilidad de definir
 funciones como datos *de primera categoría*, otra serie de
