No es que haya sido muy productivo
Pero al menos he añadido un capítulo no-Python a la parte del capítulo
anteriorque había desgajado. Y de camino he conocido e instalado
PowerShell. Not bad.

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -157,7 +157,15 @@ capaz de trabajar con todos ellos.
 	"þor el poderoso ✌"
 	
 Como hemos visto más arriba, las cadenas o *strings* están rodeadas
-por comillas. Y están compuestas por un número de caracteres
+por comillas. 
+
+>Hemos elegido þ como carácter raro porque es uno de los pocos de este
+>tipo que se pueden teclear fácilmente desde el teclado castellano. þ
+>sale con AltGr + p. Otros caracteres son ß, que sale con AltGr + s u
+>ø, que se obtiene con AltGr + o.
+
+
+Y están compuestas por un número de caracteres
 determinado, que se halla con `len`
 
 ```python
@@ -282,7 +290,7 @@ requiere, pero si todo falla, Google es tu amigo.
 No es malo equivocarse. Sucede en las mejores familias, incluso en las
 operaciones más básicas. Para las cuales puedes usar Python como si
 fuera una calculadora un poco más complicada y que usara, además,
-cadenas de caracteres. 
+cadenas de caracteres. Vale, una calculadora complicada *y* rara. 
 
 
 
