--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -313,3 +313,58 @@ cadena, y por tanto, también de una forma un tanto complicada, crea
 "barras" con almohadillas "#" de la longitud de los diferentes
 elementos de la lista que se le pasa. 
 
+Haskell, como todos los lenguajes como los que hemos trabajado, tiene
+un REPL que se ejecuta desde la línea de órdenes, así que quizás
+convenga también 
+
+## aprender unas cuantas órdenes
+
+que permiten trabajar con la misma. Estas órdenes corresponden al
+`shell` de Linux, que funciona, aunque posiblemente en una versión más
+antigua, en los Mac, y tienen también un equivalente en el [PowerShell](https://www.tecmint.com/install-powershell-in-linux/),
+la herramienta de administración libre de Microsoft. Va a haber unas
+cuantas cosas que necesites hacer saliendo de la comodidad de un
+interfaz gráfico. En muchos casos va a ser más rápido y, sobre todo,
+teniendo en cuenta que todas las órdenes que ejecutas se quedan
+almacenadas en la historia del intérprete, mucho más repetibles. Ya
+hemos visto anteriormente cómo navegar por la línea de órdenes, ahora
+algunas órdenes útiles que funcionan en todos los intérpretes:
+
+* `grep` busca en ficheros. Es muy útil para ver, por ejemplo, dónde
+  se ha usado alguna función y copiar/pegarla a un nuevo lugar, que es
+  como se avanza el tema. `grep str *.md` usa además el comodín `*`,
+  que se refiere a cualquier cadena de caracteres de cualquier
+  longitud. En este caso, buscaría la cadena `str` en todos los
+  ficheros con la extensión `md`. Se pueden buscar también frases,
+  `grep "TypeError: must" *` buscará exactamente esa frase; la única
+  diferencia con el caso anterior es que rodeamos la cadena que se
+  busca con comillas para que se busque íntegra.
+  
+* Se pueden crear directorios con `mkdir` y borrarse con `rmdir`. 
+
+* La orden `find` también es muy útil. Tratamos de buscar el
+  directorio donde metimos el dichoso fichero de Python, pues `find
+  . -name *.py -print`. En realidad en PowerShell sólo busca en el
+  directorio actual, pero en Linux descenderá por todos los
+  directorios a partir de `.`, el directorio actual.
+  
+* `ls` lista todos los ficheros y directorios del directorio actual,
+  incluyendo `.` y `..`, y `ls -alt` los muestra con permisos y los
+  ordena por fecha de modificación.
+  
+![ls -alt en PowerShell](../img/ps.png)
+
+DuckDuckGo, el buscador para
+programadores,
+[te da una chuleta de shell](https://duckduckgo.com/?q=shell+cheatsheet&t=canonical&ia=cheatsheet) directamente
+a la hora de buscar,
+también
+[de PowerShell](https://duckduckgo.com/?q=powershell+cheatsheet&t=canonical&ia=cheatsheet&iax=1). La
+puedes tener como referencia a si quieres saber cómo se hace cualquier
+otra cosa. Los dos shells son muy potentes, y permiten crear programas
+potentes y expresivos. Conocerlos bien es un gran complemento al uso
+de cualquier lenguaje de programación.
+
+
+
+
