--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -32,7 +32,7 @@ devolver. En este caso, multiplicarlo por sí mismo y devolver el valor. Los pri
 paréntesis, que, recordemos, sirven para agrupar operaciones, definen
 esta operación sin nombre; los segundos paréntesis sirven para definir
 el valor que se le va a pasar a la función definida. Esta función es
-*pura*, tal como las funciones mátemáticas, en el sentido que toma un
+*pura*, tal como las funciones matemáticas, en el sentido que toma un
 valor, aunque podrían ser varios, y devuelve otro valor. No tiene
 *efectos secundarios*: no cambia nada en el exterior, ni siquiera el
 valor de las variables sobre las que trabaja. Recibe una copia de los
