Realmente he hecho esto para llegar a las 10k
Porque no tengo gana y además me quiero ir a tomar una cerveza.

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -245,7 +245,7 @@ algoritmos de otra forma. Por ejemplo, usando
 ## recursión.
 
 Se habla de recursión cuando una función se llama a sí misma. En
-programación funcional, es la forma *normal* de hacer las cosas,
+programación funcional, resolver un problema usando recursión es la forma *normal* de hacer las cosas,
 suplantando la repetición. Uno de los principios de este tipo de
 programación es que las funcionen no tienen efectos secundarios; con
 la recursión se consigue *pasar* el estado como parámetro de una
@@ -340,7 +340,6 @@ Fibonacci
 ```Groovy
 def fib(n) {n<2 ? 1 : fib(n-1)+fib(n-2)}
 ```
-
 que usaría la suma de los dos elementos anteriores para calcular el
 elemento enésimo, y el operador ternario `?:`, que está presente en la
 mayoría de los lenguajes y que es similar al `if-else` en una sola
@@ -411,4 +410,12 @@ apariencia que corresponda a las marcas incluidas.
 >GitHub con los ejercicios, cada uno en un fichero correspondiente, y
 >con un enlace y explicación en el `README.md` creado. Una vez más,
 >difundir por Twitter con `#1linepy`
+
+Realmente va a ser conveniente que usemos este tipo de repositorios
+cuando trabajemos con estructuras de datos más, complejas, como los
+
+## conjuntos y diccionarios.
+
+Comencemos con los que se denominan *diccionarios*, aunque en otros
+lenguajes se les llama *arrays* asociativos o tablas *hash*. 
 
