Comenzando con las tablas hash

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -143,7 +143,6 @@ los elementos de la lista también usando corchetes:
 ["A1", 4+5j, lambda dato: dato*dato ][1]
 (4+5j)
 ```
-
 o incluso a un rango de ellos:
 
 ```Python
@@ -166,7 +165,7 @@ este tipo de dato que va a ser inalterable a lo largo de su vida.
 ('A1', (4+5j), <function <lambda> at 0x7faa8da8ee18>)
 ```
 
-Aparentemente es igual, pero su tipo es `tuple` en vez de `list`. Se
+Aparentemente es igual, pero su tipo es `tuple` o *tupla* en vez de `list`. Se
 puede usar `[]` de la misma forma para acceder a elementos
 particulares, pero `pop` no va a funcionar; simplemente no tiene ese
 método porque una vez creada una tupla es inmutable, sólo se puede
