--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -417,5 +417,66 @@ cuando trabajemos con estructuras de datos más, complejas, como los
 ## conjuntos y diccionarios.
 
 Comencemos con los que se denominan *diccionarios*, aunque en otros
-lenguajes se les llama *arrays* asociativos o tablas *hash*. 
+lenguajes se les llama *arrays* asociativos o tablas *hash*. Los
+diccionarios están compuestos por pares clave-valor; la clave es una
+cadena, el valor puede ser cualquier cosa.
+
+```Python
+juego = { 'jugador'   :'Johnny', 
+         'mano'      : ['5♠','Q♣','8♥'], 
+		 'estrategia': lambda mano: min(mano) } 
+```
+
+Esta variable contiene información sobre una mano
+de [brisca](https://es.wikipedia.org/wiki/Brisca) de un jugador, el
+Johnny, cuya estrategia está representada por una función `estrategia`
+que siempre saca el mínimo de todas las cartas. No es una buena
+estrategia, pero una mejor no dabría en esa línea. El formateo se ha
+incluido simplemente para que sea un poco más visible, pero no tiene
+ninguna importancia en la sintaxis. En este caso. 
+
+De la misma forma que en las listas se accede al contenido iterando
+de elemento en elemento, en este caso accederemos por la `clave` para
+cada contenido: `juego['jugador']` nos devolverá `'Johnny'`, e igual
+con el resto. 
+
+Se puede considerar un diccionario una lista en la que cada elemento
+es un par clave, valor. De hecho, [el método `items`](https://stackoverflow.com/questions/12229064/mapping-over-values-in-a-python-dictionary) de la clase te los
+representa de esa forma:
+
+```Python
+juego.items()
+dict_items([('jugador', 'Johnny'), ('mano', ['5♠', 'Q♣', '8♥']), ('estrategia', <function <lambda> at 0x7fcd3e298a60>)])
+```
+Evidentemente, los diccionarios son, exactamente igual que cualquier
+otro objeto en Python, *representantes* o, de forma más precisa,
+*instancias* de una clase, y por eso sólo por el hecho de ser creados
+de una forma determinada tienen una serie de métodos que se pueden
+usar sobre ellos. En este caso incluyen datos y también una función
+que se puede aplicar sobre los mismos, así que podemos definir
+funciones de esta forma:
+
+```Python
+def juega( mano ): return mano['estrategia'](mano['mano'])
+```
+
+que directamente aplicaría la "estrategia" que hayamos decidido, y que
+está incluida en la estructura de datos, a la mano que cada jugador
+tenga. En este caso:
+
+```Python
+from random import random
+juego_ricky = { 'jugador'   :'Ricky', 
+	            'mano'      : ['3♠','4♣','A♥'], 
+				'estrategia': lambda mano: mano[int(random()*len(mano))] }
+				
+juega(juego_ricky)
+'3♠'
+```
+
+> *Ejercicio*: diseñar una estructura de datos para sucesiones
+> matemáticas que contenga el nombre de la sucesión, el elemento
+> inicial, y la función para calcular el siguiente elemento. Diseñar
+> también una función que efectivamente calcule el siguiente elemento
+> a partir del valor inicial. 
 
