Más cosas con PowerShell

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -480,3 +480,22 @@ juega(juego_ricky)
 > también una función que efectivamente calcule el siguiente elemento
 > a partir del valor inicial. 
 
+En general, todos los lenguajes de programación que no son dinosaurios
+como el C suelen tener esta estructura de datos. Incluso lenguajes
+específicos de dominio como el que incluye PowerShell. Este script,
+por ejemplo, define una tabla hash o diccionario:
+
+```PowerShell
+$juego_ricky = @{ "jugador" ="Ricky"; "mano" = @("3♠","4♣","A♥")} 
+$juego_ricky
+```
+
+Que resulta en algo así en PowerShell:
+![Hash en PowerShell](../img/ps-hash.png)
+
+En vez de usar directamente los corchetes para recuperar el valor
+asociado a una clave, PowerShell usa `Get-Item`:
+
+![Recuperando el valor](../img/ps-get-item.png)
+
+
