Añade un ejercicio y vamos que nos vamos

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -498,4 +498,32 @@ asociado a una clave, PowerShell usa `Get-Item`:
 
 ![Recuperando el valor](../img/ps-get-item.png)
 
+Sobre la estructura de datos anterior, podríamos preguntarnos si
+realmente hace falta que la mano de cartas esté en una lista. Una
+lista está ordenada, tiene un primer elemento y un último y el resto
+tiene un elemento delante y otro detrás. Una mano de cartas no tiene
+por qué estarlo. Son diferentes elementos que se pueden ordenar como
+uno quiera, o de ninguna manera. ¿Por qué no usar un conjunto? Los
+conjuntos o `sets` en Python se caracterizan precisamente por no estar
+ordenados:
+
+```Python
+mano_ricky= set( ['3♠','4♣','A♥'] )
+```
+
+En este caso hay que usar una palabra clave `set`, simplemente porque
+ya se nos han acabado los tipos de paréntesis para usar. Ya tenemos
+los corchetes, los paréntesis, las llaves... Así que se pone un `set`
+y listo. 
+
+Con estos conjuntos se puede comprobar si un elemento pertenece o no a
+él:
+
+```Python
+'3♠' in mano_ricky
+True
+```
+
+> *Ejercicio*: generar una baraja de cartas y una función que extraiga
+> una mano de 3 cartas de ella. 
 
