Avanzando un poquito

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -431,7 +431,7 @@ Esta variable contiene información sobre una mano
 de [brisca](https://es.wikipedia.org/wiki/Brisca) de un jugador, el
 Johnny, cuya estrategia está representada por una función `estrategia`
 que siempre saca el mínimo de todas las cartas. No es una buena
-estrategia, pero una mejor no dabría en esa línea. El formateo se ha
+estrategia, pero una mejor no cabría en esa línea. El formateo se ha
 incluido simplemente para que sea un poco más visible, pero no tiene
 ninguna importancia en la sintaxis. En este caso. 
 
@@ -527,3 +527,20 @@ True
 > *Ejercicio*: generar una baraja de cartas y una función que extraiga
 > una mano de 3 cartas de ella. 
 
+Los conjuntos
+tienen
+[las operaciones típicas en ellos](https://www.learnpython.org/en/Sets),
+por ejemplo, si Ricky sospecha que Johnny se ha sacado una carta de la
+manga, hallará la intersección entre las dos:
+
+```Python
+mano_johnny= set( ['7♣', '7♥', '7♦'] )
+mano_johnny.intersection(mano_ricky)
+set()
+```
+
+que devuelve, afortunadamente, un conjunto vacío, permitiendo que
+sigan pacíficamente con su juego, su Bourbon y sus pretzels. Ahora
+Johnny juega el 7 de corazones:
+```Python
+mano_johnny - '7♥'
