Manos ganadoras y perdedoras

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -511,10 +511,11 @@ ordenados:
 mano_ricky= set( ['3♠','4♣','A♥'] )
 ```
 
-En este caso hay que usar una palabra clave `set`, simplemente porque
-ya se nos han acabado los tipos de paréntesis para usar. Ya tenemos
-los corchetes, los paréntesis, las llaves... Así que se pone un `set`
-y listo. 
+En este caso hay que usar una palabra clave `set` para aclarar que se
+trata de este tipo de estructura de datos, pero también podríamos
+haber usado llaves, exactamente igual que con los diccionarios:
+
+
 
 Con estos conjuntos se puede comprobar si un elemento pertenece o no a
 él:
@@ -542,5 +543,34 @@ set()
 que devuelve, afortunadamente, un conjunto vacío, permitiendo que
 sigan pacíficamente con su juego, su Bourbon y sus pretzels. Ahora
 Johnny juega el 7 de corazones:
+
 ```Python
-mano_johnny - '7♥'
+mano_johnny - {'7♥'}
+{'7♥', '7♣'}
+```
+
+Ricky juega el 3♠, que es muestra, así que se lleva la mano. Como los
+dos tienen ahora dos cartas, tienen que coger del mazo:
+
+```
+from random import choice
+mano_johnny = mano_johnny | { choice(baraja) }
+```
+
+Una vez más, usamos una función del módulo `random` que elige un
+elemento de un conjunto de cosas, en este caso una baraja. De hecho,
+siendo la brisca habría sido mucho mejor hacerlo así
+
+```
+mano_johnny = mano_johnny | { baraja.pop() }
+```
+
+porque el mazo es un ejemplo de pila, ya que sólo se puede tomar la
+carta superior, que es lo que se hace con `pop`. Usando `|`, que
+representa en este caso la unión entre conjuntos, se genera un
+conjunto de un solo elemento, como arriba, poniendo llaves alrededor y
+se une a la mano de Johnny. Ha sido un 10♦, eso es suerte, aunque como
+dicen en *The Gambler*, 
+
+>Cada mano es ganadora, cada mano es perdedora.
+
