Ya metido de lleno en el juego
Prometo que no iba a meter ninguna medida de estas, pero es meter
cosas de juego y en seguida me acuerdo de The Gambler, y ya no puedo
evitar citarlo. Esta es posiblemente la mejor canción del mundo, y la
que más lecciones guarda para el desarrollo y para la vida.

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -574,3 +574,21 @@ dicen en *The Gambler*,
 
 >Cada mano es ganadora, cada mano es perdedora.
 
+## Concluyendo
+
+Tenemos una serie de estructuras de datos más con las trabajar y
+representar una serie de problemas, sean listas, datos que no son
+homogéneos y a los que se le puede asignar un significado para mejorar
+su comprensión y tratamiento, incluso conjuntos para representar
+aquellos grupos de objetos que no tengan ninguna relación entre sí más
+que la igualdad de su pertenencia al mismo grupo. 
+
+Todos los objetos tienen sus propias operaciones, y amplían la
+capacidad de abstracción de los problemas que se pueden resolver. Como
+dicen también en *The Gambler*, 
+
+>Si quieres jugar al juego, debes aprender a jugar bien.
+
+En este caso, debes aprender cómo trabajar con las diferentes
+estructuras de datos y cuál es la más adecuada en cada caso. Y en caso
+de duda, mide tiempos y sigue el Zen de Python. 
