Pues me voy a ir a dormir

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -1,2 +1,54 @@
 # Pilas no incluidas
 
+El enfoque minimalista de Python hace que sólo haya disponibles en el
+espacio de nombres principal, es decir, sin prefijos, una serie de
+funciones, menos de 100. Ya hemos visto otras funciones, `timeit` y
+`random` que, aunque no estén *cargadas* por defecto, sí se pueden
+usar directamente siempre que las importemos en nuestro espacio de
+nombres. 
+
+Afortunadamente, el hecho de que Python sea software libre hace que se
+cree todo un ecosistema alrededor del mismo, con funciones que no
+están incluidos en el lenguaje, pero que añaden funcionalidad al
+mismo. Estos módulos generalmene están o en un repositorio, o
+referenciados en un directorio central de forma que se especifica
+desde dónde se descargan y qué otras dependencias tienen que cargarse
+antes de ser instalados.
+
+En el caso de Python3, `pip3` es la herramienta que se usa. Se instala
+junto con el intérprete, y permite tanto buscar, como instalar, como
+actualizar *in situ*
+
+Vamos a usarla para trabajar con
+
+## `bpython`
+
+`bpython` es un intérprete alternativo de Python que permite trabajar
+con él de forma más agradable, con una serie de *goodies* como
+sintaxis coloreada, completado automático de órdenes y variables, y
+también información interactiva. Vamos a instalarlo con
+
+```shell
+pip3 install bpython
+```
+
+Se ejecuta usando `bpython` desde la línea de órdenes y el resultado
+es algo así:
+
+![usando `bpython`](../img/bpython.png).
+
+Entre otras cosas, este *shell* nos ayuda a insertar fácilmente los
+métodos de un objeto determinado simplemente añadiendo un `.` al final
+del objeto: aparecen todos los métodos que tiene. En el
+	caso de la `baraja` que hemos mostrado en la imagen anterior, nos
+	mostrará una serie de métodos que podemos seleccionar pulsando el
+	tabulador; cuando seleccionamos uno y añadimos un paréntesis,
+	`bpython` nos explicará cuales son los parámetros que toma esta
+	función, lo que nos ahorra bastantes viajes a StackOverflow.
+	
+Vamos a usar a partir de ahora `bpython` para el resto del capítulo, y
+posiblemente del libro, así que conviene que esté convenientemente
+instalado a partir de este momento. Adicionalmente, eso significará
+que tienes permisos para instalarte cosas, sin el cual el resto del
+capítulo tampoco va a tener mucho sentido. 
+
