--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -10,7 +10,7 @@ nombres.
 Afortunadamente, el hecho de que Python sea software libre hace que se
 cree todo un ecosistema alrededor del mismo, con funciones que no
 están incluidos en el lenguaje, pero que añaden funcionalidad al
-mismo. Estos módulos generalmene están o en un repositorio, o
+mismo. Estos módulos generalmente están o en un repositorio, o
 referenciados en un directorio central de forma que se especifica
 desde dónde se descargan y qué otras dependencias tienen que cargarse
 antes de ser instalados.
